--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Group website of the Li lab of materials research for sustainable energy applications
   at the Hong Kong University of Science and Technology (Guangzhou).
 baseurl: '' # the subpath of the site, e.g. /team/
-url: 'https://liresearchlab.github.io' # the base hostname & protocol for the site  # 'http://localhost:4000/'
+url: 'http://localhost:4000' # the base hostname & protocol for the site  # 'http://localhost:4000/'
 twitter_username: YuhengLI9
 github_username: liresearchlab
 
