--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,10 +42,12 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      - name: Uninstall Bundler
+        run: gem uninstall bundler
+      - name: Install Bundler
+        run: gem install bundler -v 2.1.4
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: gem uninstall bundler
-        run: gem install bundler -v 2.1.4
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --trace
         env:
           JEKYLL_ENV: production
