--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,10 +42,10 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-      - name: Uninstall Bundler
-        run: gem uninstall bundler
+          #- name: Uninstall Bundler
+          #run: gem uninstall bundler
       - name: Install Bundler
-        run: gem install bundler -v 2.1.4
+        run: gem install bundler:2.1.4 --default
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --trace
