--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,13 +38,13 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
         with:
-          ruby-version: '2.7' # Not needed with a .ruby-version file
+          ruby-version: '2.7' # Not needed with a .ruby-version file # 3.2 gives errors
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-          #- name: Uninstall Bundler
+          #- name: Uninstall Bundler # these do not work, just use the Bundler that comes with ruby (the default)
           #run: gem uninstall bundler
           #- name: Install Bundler
           #run: gem install bundler:2.1.4 --default
