--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -36,7 +36,8 @@ jobs:
           #- name: Install Bundler
           #run: gem install bundler:2.1.4 --default
       - name: Setup Ruby
-        uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
+        #uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
+        uses: ruby/setup-ruby@086ffb1a2090c870a3f881cc91ea83aa4243d408 # v1.195.0
         with:
           ruby-version: '2.7' # Not needed with a .ruby-version file # 3.2 gives errors
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
